--- a/Flextimer/ko.lproj/Localizable.strings
+++ b/Flextimer/ko.lproj/Localizable.strings
@@ -2,6 +2,31 @@
   Localizable.strings
   Flextimer
 
-  Created by Suzy Mararon Park on 2020/02/13.
+  Created by Suzy Mararon Park on 2020/02/14.
   Copyright © 2020 Suzy Mararon Park. All rights reserved.
 */
+
+// MARK: - TabBarController
+
+// TAB_BAR_ITEM_1
+"Today" = "오늘의 근태";
+// TAB_BAR_ITEM_2
+"Record" = "기록";
+
+
+// MARK: - TutorialPageViewController
+
+// SKIP
+"Skip" = "건너뛰기";
+// START
+"Start" = "시작하기";
+
+// TUTORIAL_TITLE_1
+"Easy to use on lock screen" = "잠금화면에서도 간편한 사용";
+// TUTORIAL_CONTENT_1
+"Add to the widget to record your start and end time more quickly, and check your remaining time easily to get off work." = "위젯에 추가해 더욱 신속하게 출퇴근을 기록하고, 퇴근까지 남은 시간을 바로 확인하세요.";
+
+// TUTORIAL_TITLE_2
+"Even if you forgot to record" = "출근을 늦게 기록했어도";
+// TUTORIAL_CONTENT_2
+"It's fine. Just create new record and fix the start time anytime!" = "바로 수정할 수 있으니깐! 오늘의 퇴근 예상 시간과 퇴근까지 남은 시간도 확인하세요.";
