--- a/Flextimer/ko.lproj/Localizable.strings
+++ b/Flextimer/ko.lproj/Localizable.strings
@@ -85,3 +85,20 @@
 "Off(%dd) " = "휴무(%d일) ";
 "Overwork(%dd) " = "초과근무(%d) ";
 "⏱ Based on %@%@%@" = "⏱ %@%@%@ 기준";
+
+
+// MARK: - HistoryViewController
+
+"%d. %d." = "%d년 %d월";
+"HVC_GO" = "기록 조회";
+"HVC_OFF" = "휴무 처리";
+"HVC_DELETE" = "기록 삭제";
+"HVC_CREATE" = "기록 생성";
+
+
+// MARK: - HistoryDetailViewModel
+
+"HDVM_NO_CONTENT" = "(등록된 내용 없음)";
+"HDVM_START" = "출근";
+"HDVM_END" = "퇴근";
+"HDVM_MEMO" = "적바림";
