Edit HistoryDateCheckView Button localization

--- a/Flextimer/en.lproj/Localizable.strings
+++ b/Flextimer/en.lproj/Localizable.strings
@@ -87,6 +87,10 @@
 "TITV_SEC" = "sec";
 
 
+// MARK: - HistoryDateCheckView
+"HDCV_TODAY" = "Today";
+
+
 // MARK: - HistorySectionFooterView
 
 "%@ CLEAR!" = "%@ CLEAR!";
