--- a/Flextimer/en.lproj/Localizable.strings
+++ b/Flextimer/en.lproj/Localizable.strings
@@ -155,11 +155,11 @@
 
 // MARK: - SettingDayNameCell
 
-"DAY_NAME_0" = "M";
-"DAY_NAME_1" = "T";
-"DAY_NAME_2" = "W";
-"DAY_NAME_3" = "T";
-"DAY_NAME_4" = "F";
-"DAY_NAME_5" = "S";
-"DAY_NAME_6" = "S";
+"DAY_NAME_0" = "Mon";
+"DAY_NAME_1" = "Tue";
+"DAY_NAME_2" = "Wed";
+"DAY_NAME_3" = "Thur";
+"DAY_NAME_4" = "Fri";
+"DAY_NAME_5" = "Sat";
+"DAY_NAME_6" = "Sun";
 
