--- a/Flextimer/ko.lproj/Localizable.strings
+++ b/Flextimer/ko.lproj/Localizable.strings
@@ -167,7 +167,7 @@
 
 
 "Start: %@" = "출근: %@";
-"%@ left to go home" = "퇴근까지 %@ 남았어요.";
+"%@ left to go home" = "퇴근까지 %@ 남았어요";
 "🚨Overworking Alert🚨 %@ OVER" = "🚨초과 근무 경보🚨 %@째 초과근무 중";
 "TVC_%@ OVER" = "%@째 초과근무 중";
-"%@ left" = "%@ 남았어요.";
+"%@ left" = "%@ 남았어요";
