--- a/Flextimer/en.lproj/Localizable.strings
+++ b/Flextimer/en.lproj/Localizable.strings
@@ -122,6 +122,7 @@
 
 "SVM_VERSION" = "Version";
 "SVM_DEVELOPER" = "Developer";
+"SVM_QA" = "Contact Us by Email";
 "SVM_OPENSOURCE" = "Opensource";
 "SVM_TUTORIAL" = "Tutorial";
 
@@ -132,6 +133,7 @@
 "SVC_SECTION1" = "Workhours per a Day";
 "SVC_SECTION2" = "Workdays per a Week";
 "SVC_SECTION3" = "Etc.";
+"SVC_EMAIL" = "Hello. Thank you for using Flextimer. If there is any idea, problem or bug, please don't hesitate and send us email anytime. 😎";
 
 
 // MARK: - WorkhoursADayViewController
